<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/input"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputET" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:columnCount="4"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV">

        <Button
            android:id="@+id/divideBTN"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/divide"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/timesBTN"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/times"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/subtractBTN"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/subtract"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/addBTN"
            android:layout_height="150dp"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/add"
            android:layout_rowSpan="3"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/oneBTN"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/one"
            android:textSize="16sp" />

        <Button
            android:id="@+id/twoBTN"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/two"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/threeBTN"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/three"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/fourBTN"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/four"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/fiveBTN"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/five"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/sixBTN"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/six"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/sevenBTN"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/seven"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/eightBTN"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/eight"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/nineBTN"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/nine"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/zeroBTN"
            android:layout_width="180dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="@string/zero"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/resultBTN"
            android:layout_width="260dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="@string/equal"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/resetBTN"
            android:layout_width="350dp"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/reset"
            android:layout_columnSpan="4"
            android:textSize="16sp"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>